# Syntra

./: README.md  fix_demo_theme.py  patch_groq.py
backend/: pyproject.toml  requirements.txt  test_e2e.py  test_gen.py
backend/app/ai/execution/: strategy.py
backend/app/ai/providers/: fallback.py  groq.py
backend/app/services/document_generation/: service.py
frontend/src/app/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/approvals/: page.tsx
frontend/src/app/knowledge/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/workflows/demo/: page.tsx
frontend/src/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/src/components/workflow/: DAGViewer.tsx  ExecutionTimeline.tsx
frontend/src/lib/: formatMarkdown.ts
