[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langgraph>=1.2.7",
    "markdown>=3.10.2",
    "psycopg-binary>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "supabase>=2.31.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.50.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
